--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ body {
 }
 .header .links {
     position: relative;
+    cursor: pointer;
+
 }
 .header .links:hover .icon span:nth-child(2){
     width: 100%;
@@ -68,6 +70,7 @@ body {
     background-color: #333;
     margin-bottom: 5px;
     height: 2px;
+    /* cursor: pointer; */
 }
 
 .header .links .icon span:first-child {
@@ -80,4 +83,44 @@ body {
 .header .links .icon span:last-child {
     width: 100%; 
 }
+.header .links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #f6f6f6;
+    position: absolute;
+    right: 0;
+    min-width: 200px;
+    top: calc(100% + 15px);
+    display: none;
+}
+
+.header .links ul::before {
+    content: '';
+    border-width: 10px;
+    border-style: solid;
+    border-color: rgba(255, 0, 0, 0) rgba(0, 128, 0, 0) #f6f6f6f6 rgba(0, 0, 0, 0);
+    position: absolute;
+    right: 5px;
+    top: -19px;
+}
+.header .links:hover ul{
+    display:block;
+}
+.header .links ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #333;
+    transition: .3s;
+}
+.header .links ul li a:hover {
+    padding-left: 25px;
+    margin-top: 5px;
+
+}
+.header .links ul li:not(:last-child) {
+   border-bottom: 1px solid #ddd;
+}
+
 /* End Header */
