--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Work Sans', sans-serif;
 }
@@ -75,12 +78,17 @@ body {
 /* Start Header */
 .header {
     padding: 20px;
+    
 }
 
 .header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* position: fixed;
+    z-index: 10;
+    background-color: #10cab7;
+    top: 0; */
 }
 .header .logo{
     width: 40px;
